tests/errors/surf_type_06.experr
type 'String' is not callable
